--- a/no.html
+++ b/no.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     *{ padding:0; margin:0; border:0;}
-    #id{width:300px; margin:80px auto; cursor:pointer;padding:20px; border-radius:6px;background:#fca; text-align:center; font-size:2em; text-shadow:1px 1px 1px #333; font-family:Helvetica, sans-serif;}
+    #no{width:300px; margin:80px auto; cursor:pointer;padding:20px; border-radius:6px;background:#fca; text-align:center; font-size:2em; text-shadow:1px 1px 1px #333; font-family:Helvetica, sans-serif;}
   </style>
 </head>
 <body>
