--- a/no_pl.html
+++ b/no_pl.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   *{ padding:0; margin:0; border:0;}
-  #no{width:300px; margin:80px auto; cursor:pointer;padding:20px; border-radius:6px;background:#fca; text-align:center; font-size:2em; text-shadow:1px 1px 1px #333; font-family:Helvetica, sans-serif;}
+  #no{width:300px; margin:80px auto; cursor:pointer;padding:20px; border-radius:6px;background:#f77; color:#fff; text-align:center; font-size:2em; text-shadow:2px 2px 0px #333; font-family:Helvetica, sans-serif;}
 </style>
 </head>
 <body>
